[package]
name = "rust-study"
version = "0.1.0"
authors = ["toyseed <toyseed@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
# You can set this value from 0 to 3.
opt-level = 0

[dependencies]
rand="0.5.5"
slab = "0.4.2"